--- a/frontend/src/components/dashboard/index.css
+++ b/frontend/src/components/dashboard/index.css
@@ -10,13 +10,13 @@
   font-size: 24px;
   width: 20px;
   height: 20px;
-  padding-left: 18%;
+  padding-left: 40%;
   border-radius: 30%;
   object-fit: cover;
 }
 
 .hello {
-  padding-left: 20%;
+  padding-left: 15%;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   font-size: 24px;
@@ -37,25 +37,21 @@
 /** tour cards ****/
 
 .dash-container {
-  margin-top: 80px;
   width: auto;
   height: 80vh;
-
 }
 
-.tour-slider {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-.tour-slider .slick-slide {
-  margin: 0 10px;
-}
 
 .recommended-trips {
   background-color: #f5f5f5;
   padding: 10px;
+}
+
+.recommended-trips-header{
+  color: #ce1312;
+  text-align: center;
+  font-size: 24px;
+
 }
 
 .recommended-trips h3 {
@@ -73,10 +69,25 @@
   margin-bottom: 10px;
 }
 
-/* Adjust the styling as needed to achieve your desired appearance */
-
-
-
-
 /**** end of tour cards *************/
 
+/****search in hero dashboard */
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+  padding-top: 100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+}
+
+
+/**** End search in hero dashboard */
+
+.trip-cover-image{
+  vertical-align: middle;
+  width: 80%;
+  height: 70px;
+  border-radius: 10px;
+}
