--- a/frontend/src/components/dashboard/index.css
+++ b/frontend/src/components/dashboard/index.css
@@ -41,7 +41,6 @@
   height: 80vh;
 }
 
-
 .recommended-trips {
   background-color: #f5f5f5;
   padding: 10px;
@@ -90,4 +89,70 @@
   width: 80%;
   height: 70px;
   border-radius: 10px;
+}
+
+/*********dashboard-tour-card *****************/
+.dashboard-tour-card-container {
+  display: flex;
+  overflow-x: auto;
+  flex-wrap: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
+.dashboard-tour-card {
+  flex: 0 0 auto;
+  width: 250px; /* Adjust the width as needed */
+  margin-right: 10px; /* Adjust the margin as needed */
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.dashboard-tour-card img {
+  height: 150px; /* Adjust the height as needed */
+}
+
+.col-9 {
+  position: sticky;
+  top: 0;
+  height: 70vh;
+}
+
+/****slider **/
+.dashboard-tour-card {
+  /* Existing styles for col-9 */
+  /* ... */
+  position: relative;
+  overflow: hidden;
+}
+
+.trip-cards-slider {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.trip-cards-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.slider-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 8px;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #000;
+  font-size: 24px;
+}
+
+.prev-button {
+  left: 16px;
+}
+
+.next-button {
+  right: 16px;
 }
