--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,44 +49,6 @@ h6 {
   font-family: var(--font-secondary);
 }
 
-/*--------------------------------------------------------------
-# Sections & Section Header
---------------------------------------------------------------*/
-section {
-  overflow: hidden;
-  padding: 80px 0;
-}
-
-.section-bg {
-  background-color: #eee;
-}
-
-.section-header {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.section-header h2 {
-  font-size: 13px;
-  letter-spacing: 1px;
-  font-weight: 400;
-  margin: 0;
-  padding: 0;
-  color: #7f7f90;
-  text-transform: uppercase;
-  font-family: var(--font-default);
-}
-
-.section-header p {
-  margin: 0;
-  font-size: 48px;
-  font-weight: 400;
-  font-family: var(--font-primary);
-}
-
-.section-header p span {
-  color: var(--color-primary);
-}
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -241,7 +203,7 @@ section {
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  height: 90px;
+  height: 70px;
   border-bottom: 1px solid #fff;
 }
 
@@ -809,11 +771,22 @@ section {
 }
 
 /***********Search bar***************/
+.search-section {
+  position: sticky;
+  top: 0;
+  z-index: -1;
+  transition: z-index 0.3s ease;
+}
+
+.search-active {
+  z-index: 999;
+}
+
 .search-bar {
   background-color: #f8f9fa;
   padding: 10px;
   position: relative;
-  top: 60px;
+  top: 30px;
   z-index: 1; /* Ensure the search bar appears above other elements */
 }
 
@@ -864,12 +837,11 @@ section {
 
 .tour-card {
   display: grid;
-  margin-top: 5px;
   flex-direction: column;
-  padding: 5px;
   align-items: center;
-  width: 100%;
+  width:40%;
 }
+
 
 .btn-explore {
   font-weight: 500;
@@ -891,13 +863,13 @@ section {
 
 .tour-image {
   width: 100%;
-  height: 200px;
+  height: 150px;
   object-fit: cover;
   border-radius: 8px;
 }
 
 .tour-details {
-  margin-top: 16px;
+  padding-top: 5px;
   text-align: center;
 }
 
