--- a/frontend/src/components/dashboard/index.css
+++ b/frontend/src/components/dashboard/index.css
@@ -92,7 +92,6 @@
 }
 
 /*********dashboard-tour-card *****************/
-/* dashboard.css */
 .dashboard-tour-card-container {
   position: relative;
   overflow: hidden;
@@ -111,12 +110,14 @@
 .dashboard-tour-card {
   flex: 0 0 25%;
   padding: 10px;
-  opacity: 0.6;
-  transition: opacity 0.3s ease-in-out;
+  opacity: 1;
+  transition: transform 0.3s ease-in-out;
+  position: relative;
+  cursor: pointer;
 }
 
 .dashboard-tour-card.active {
-  opacity: 1;
+  transform: scale(1.05);
 }
 
 .card-image-wrapper {
@@ -142,10 +143,22 @@
   padding: 10px;
   background-color: #f1f1f1;
   border-radius: 4px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+  transform-origin: top;
+  transform: scale(0.9);
+  opacity: 0;
 }
 
 .dashboard-tour-card:hover .card-hover-content {
   display: block;
+  transform: scale(1);
+  opacity: 1;
 }
 
 .book-button {
@@ -183,12 +196,4 @@
   border: none;
   outline: none;
   cursor: pointer;
-}
-
-.prev-button {
-  left: 10px;
-}
-
-.next-button {
-  right: 10px;
 }
