--- a/frontend/src/components/tours/index.css
+++ b/frontend/src/components/tours/index.css
@@ -35,6 +35,7 @@
 .pictures {
   position: relative;
   padding-left: 20px;
+  cursor: pointer;
 }
 
 .imageCover {
@@ -115,6 +116,8 @@
 
 .header-tour-photos {
   font-size: 1.875rem;
+  margin-right: 24px;
+  margin-top: 45px;
 }
 
 .description-header {
@@ -190,3 +193,177 @@
 .custom-book #totalPrice {
   font-weight: bold;
 }
+
+.homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.row-container h4 {
+  margin: 0;
+  padding-left: 0.5rem;
+}
+
+.row-container i {
+  font-size: 1.5rem;
+}
+
+.row-container p {
+  margin: 0;
+  padding-left: 0.5rem;
+
+}
+
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+}
+
+
+@media (max-width: 768px) {
+  .row-container i {
+    font-size: 1rem;
+  }
+}
+
+.booking-page-container {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  margin-top: 5.5rem;
+  margin-left: 7.5rem;
+  margin-right: 7.5rem;
+  width: 70%;
+}
+
+.side-a h1 {
+  font-size: xx-large;
+  font-weight: 700;
+}
+
+.book-details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  width: 60%;
+  margin-top: 1.5rem;
+}
+
+.dates-text {
+  margin-left: 10px;
+}
+.edit-text {
+  float: right;
+  margin-right: 10px;
+  margin-top: 10px;
+  text-decoration: underline;
+}
+
+.horizontal-line{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 60%;
+}
+
+.booking-login {
+  font-weight: 600;
+  width: 60%;
+}
+
+.login-spaces{
+  grid-template-rows: 1fr 1fr;
+}
+
+.book-mail {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+  
+}
+
+.book-mail-insider {
+  border: 1px solid gray;
+  transition: border-color 0.3s ease-in-out;
+  width: 100%;
+  font-size: 16px;
+  padding: 5px;
+
+}
+
+.book-mail-insider:focus {
+  border-color: black;
+}
+
+.continue-btn{
+  width: 100%;
+}
+
+.or-container {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.or-container hr {
+  flex-grow: 1;
+  border: none;
+  height: 1px;
+  background-color: gray;
+}
+
+.or-text {
+  font-size: 14px;
+  padding: 0 10px;
+}
+
+.direct-buttons{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
+}
+
+.button-styles {
+  display: block;
+  width: 100%;
+  font-weight: bold;
+  margin-top: 2px;
+  border: 1px solid gray;
+  color: black;
+}
+
+.button-styles i {
+  color: rgb(48, 45, 224);
+}
+
+.button-styles-2 i {
+  color: rgb(218, 50, 28);
+}
+.button-styles-2 {
+  display: block;
+  width: 100%;
+  font-weight: bold;
+  margin-top: 2px;
+  color: black;
+  border: 1px solid gray;
+}
+/******side b *******/
+.side-b {
+  margin-top: 4.5rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+
+
+
+
