--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -256,6 +256,11 @@ section {
   scroll-margin-top: 90px;
 }
 
+.red-icon {
+  color: red;
+}
+
+
 /*--------------------------------------------------------------
 # Desktop Navigation
 --------------------------------------------------------------*/
