--- a/frontend/src/components/tours/index.css
+++ b/frontend/src/components/tours/index.css
@@ -363,7 +363,240 @@
   grid-template-rows: 1fr 1fr 1fr;
 }
 
+/********Booking Modal *********/
+.booking-modal {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 60%;
+  margin-top: 1.5rem;
+}
+
+.booking-heading h1{
+  margin-top: 1.5rem;
+  font-size: 2.0rem;
+  font-weight: 600;
+  color: #ce1212;
+}
+
+.booking-heading h4{
+  margin-top: 0.2rem;
+  
+  font-size: 1.0rem;
+  font-weight: 200;
+}
+
+.left-column {
+  flex: 1;
+  margin-top: 1.0rem;
+}
+
+.right-column {
+  margin-left: 2.0rem;
+  display: grid;
+  grid-template-rows: 15% 20%;
+}
+
+.close-icon {
+  position: fixed;
+  display: flex;
+  justify-content: flex-start;
+  font-size: 2.5rem;
+  color: #ce1212;
+  margin-top: -1.5rem;
+  right: 0;
+  margin-right: 1.5rem;
+}
+
+.payment-details {
+  margin-top: 20px;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+.tours-travel {
+  margin-top: 20px;
+}
+
+.booking-info-row {
+  display: flex;
+  align-items: center;
+  margin-top: 1.8rem;
+}
+
+.booking-modal-tour-image {
+  margin-right: 10px;
+}
+
+.tour-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.promo-code-row {
+  display: grid;
+  gap: 10;
+  grid-template-columns: 7.5rem 7.5rem 2.5rem;
+  }
+
+.promo-code-row button{
+  margin-left: 2.5rem;
+}
+
+.btn-apply {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-left: auto;
+  padding: 8px 35px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #fff;
+  background: var(--color-primary);
+  box-shadow: 0 8px 28px rgba(206, 18, 18, 0.2);
+}
+
+.promo-code-row input[type="text"] {
+  border: 1px solid gray;
+  padding: 5px;
+  border-radius: 4px;
+  width: 150px;
+}
+
+.promo-code-row input[type="text"]:focus {
+  outline: none;
+  border-color: #4749e4;
+}
+  
+.taxes-row {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  row-gap: 10px;
+}
+
+.subtotal-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 10px;
+}
+
+.subtotal-row div,
+.grand-total-row div {
+  display: flex;
+  align-items: center;
+}
+
+.subtotal-row span:last-child,
+.grand-total-row span:last-child {
+  margin-left: auto;
+}
 
 
+.pay-now {
+  margin-top: 1.5rem;
+}
+
+@media (max-width: 767px) {
+  .booking-modal {
+    flex-direction: column;
+  }
+
+  .close-icon {
+    justify-content: flex-start;
+  }
+
+  .payment-details {
+    margin-top: 20px;
+  }
+
+  .tours-travel {
+    margin-top: 20px;
+  }
+
+  .booking-info-row {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .booking-modal-tour-image {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
 
 
+/***************Toast Booking Modal *************/
+.booking-toast {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 30%;
+  height: 10vh;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
+
+.booking-resume-icon {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
+
+.booking-toast-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.booking-toast-message {
+  font-size: 14px;
+  color: black;
+}
+
+.booking-toast-icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.close-icon,
+.continue-icon {
+  cursor: pointer;
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+.close-icon:hover,
+.continue-icon:hover {
+  color: #ff0000;
+}
+
+/***************Booking Modal Toast Done*************/
