--- a/frontend/src/components/dashboard/index.css
+++ b/frontend/src/components/dashboard/index.css
@@ -341,9 +341,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-left: 1.1rem;
+  margin-top: 1rem;
 }
 
 .adverts-container img {
   width: 100%;
   height: 30vh;
 }
+
