--- a/frontend/src/components/tours/index.css
+++ b/frontend/src/components/tours/index.css
@@ -600,3 +600,10 @@ h3 {
 }
 
 /***************Booking Modal Toast Done*************/
+
+.reviews h2{
+  margin-top: 2.5rem;
+  margin-left: 6.5rem;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
