--- a/frontend/src/components/dashboard/profile/index.css
+++ b/frontend/src/components/dashboard/profile/index.css
@@ -94,9 +94,9 @@
 .right-section {
   flex-grow: 1;
   background-color: #ffffff;
-  padding: 20px;
+  padding: 10px;
   padding-top: 100px;
-  padding-left: 50px;
+  margin-left: 1.5rem;
 }
 
 .right-section p {
