--- a/frontend/src/components/dashboard/profile/pages/index.css
+++ b/frontend/src/components/dashboard/profile/pages/index.css
@@ -175,3 +175,186 @@
   display: flex;
   flex-direction: column;
 }
+
+
+
+/******invoice ***********/
+.i-download{
+  margin-right: 18.0rem;
+}
+.invoice {
+  display: grid;
+  grid-template-rows: 8vh 1fr 1fr 1fr 1fr 1fr 1fr;
+  margin-left: 10.5rem;
+  margin-right: 6.5rem;
+  justify-content: center;
+  align-items: center;
+  width: 21cm;
+  height: 29.7cm;
+  margin-top: 6.5rem;
+  margin-bottom: 0;
+}
+
+.header-invoice {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+  height: 19vh;
+}
+
+.header-right {
+  background-color: black;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0 0 0 150px;
+  height: 100%;
+  margin-left: 3.5rem;
+  border-left: #ce1212 1rem solid;
+}
+
+
+.header-invoice .img-n-header {
+  display: flex;
+  align-items: center;
+}
+
+.header-invoice .img-n-header img {
+  height: 5rem;
+}
+
+.header-invoice .img-n-header h1 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.header-invoice .img-n-header h1 span {
+  color: #ce1212;
+}
+
+.invoice-text {
+  color: white;
+  font-weight: 800;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 5.5rem;
+  margin-top: 0.2rem;
+
+}
+
+.header-right .dates {
+  margin-left: 5.5rem;
+  font-weight: 600;
+  font-size: 10px;
+
+}
+.invoice-details {
+  display: flex;
+  background-color: #ce1212;
+  width: 50%;
+  justify-content: center;
+  height: 5vh; 
+  gap: 0.8rem;
+  margin-top: -5.5rem;
+  border-top-right-radius: 80px;
+}
+
+.invoice-details h3 {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: white;
+  font-weight: 500;
+  justify-content: center;
+  margin-top: 0.2rem;
+  margin-bottom: 0.2rem;
+  gap: 0.2rem;
+}
+
+.invoice-details h3 i {
+  margin-right: 0.2rem;
+}
+
+.customer-info {
+  display: grid;
+  grid-template-rows: auto;
+  margin-top: -9rem;
+}
+
+.i-user-detail {
+  margin-top: -3.0rem;
+}
+
+.i-u-name {
+  font-weight: 600;
+  font-size: 28px;
+}
+
+.i-to {
+  color: #ce1212;
+  font-size: 14px;
+}
+
+.p-method{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.invoice-p-info {
+  margin-top: -2.5rem;
+  margin-left: 3.5rem;
+}
+
+.invoice-products-header {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+  margin-top: -20.5rem;
+  background-color: #ce1212;
+}
+
+
+.i-title {
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 0.5rem;
+  padding-left: 1rem;
+
+}
+
+.invoice-products-items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+  margin-top: -37.5rem;
+  padding-left: 1rem;
+}
+
+
+.tcS{
+  margin-top: -3.3rem;
+}
+
+.Thankyou{
+  margin-top: -45.5rem;
+  display: grid;
+  grid-template-columns: 1fr 0.5fr;
+  height: 5vh;
+  color: #ce1212;
+  font-weight: 500;
+}
+
+.last-part {
+  margin-top: -53.5rem;
+  background-color: black;
+  width: 50%;
+  border-right: #ce1212 0.4rem solid;
+  border-top-right-radius: 50px;
+}
+
+.conditions {
+  margin-top: -40.5rem;
+}
+
+
