--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -7,11 +7,6 @@
   margin-right: 4.5rem;
 }
 
-.search-bar {
-  display: flex;
-  align-items: center;
-  margin-top: 2.5rem;
-}
 
 .input-group {
   flex: 0 0 30%;
@@ -63,4 +58,94 @@
 .hot-flag {
   width: 100%;
   font-size: 1.5rem;
+}
+
+.home__filters {
+  margin-top: 4.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 4rem;
+}
+
+.home__filter-container {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 2px;
+  margin-right: 9rem;
+
+}
+
+.search-combo {
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+
+.search-combo img{
+  position: relative;
+  width: 20%;
+  height: 20px;
+  margin-left:1rem;
+}
+
+.search_tour__option {
+  position: relative;
+  text-decoration: none;
+  margin-left: 2.3rem;
+  padding: 2px;
+  list-style-type: none;
+  cursor: pointer;
+  color: text-gray-900;
+}
+
+.search_tour__option:hover{
+  background-color: #ce1212;
+  color:white;
+}
+.search-button {
+  object-fit: contain;
+}
+
+.searchbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  position: relative;
+  width: 60%;
+}
+
+.searchbar__item {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: relative;
+  gap: 10;
+}
+
+.searchbar__input {
+  width: 100%;
+  height: 48px;
+  padding-left: 12px;
+  padding: 4px;
+  background-color: light-white;
+  border-radius: 9999px;
+  max-width: 100%;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  margin-left: 0.5rem;
 }
