--- a/frontend/src/components/Login/App.css
+++ b/frontend/src/components/Login/App.css
@@ -204,3 +204,13 @@ height: 100%;
 }
 
 /**********forgot password Done*************/
+
+.login-space {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4em;
+}
+
+.login-buttons {
+  flex: 1;
+}
